Fixed: Modified margins changing .frame-container to max width 1320. Adjusted gap to 6px for text to fit space. Added space between paragraphs in course offerings Adjusted width and font size of course offerings according to figma. Adjusted poster left position to enter screen

--- a/src/layout/home/courses/courses.module.css
+++ b/src/layout/home/courses/courses.module.css
@@ -22,10 +22,10 @@
 }
 
 .courses-text {
-    font-size: 32px;
+    font-size: 23px;
     font-weight: 300;
-    line-height: 41px;
-    min-width: 1120px;
+    line-height: 27px;
+    max-width: 847px;
     margin-top: 35px;
 }
 
@@ -44,7 +44,7 @@
 
 .poster {
     position: absolute;
-    left: 805px;
+    left: 655px;
     bottom: 0;
     z-index: -1;
 }
